# apr_test

./: .env  .gitignore  README  pyproject.toml  write_in_db.py
src/search/: __main__.py  app.py  database.py  settings.py  tables.py
src/search/api/: __init__.py  posts.py
src/search/models/: posts.py
src/search/services/: posts.py
static/js/: script.js
static/style/: main.css
templates/: index.html
